--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 bevy = { version = "0.13.2", features = ["dynamic_linking"] }
 bevy_xpbd_2d = "0.4"
 bevy_embedded_assets = "0.10.2"
+rand = "0.8"
 
 [profile.dev]
 opt-level = 1
