--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ bevy = { version = "0.13.2", features = ["dynamic_linking"] }
 bevy_xpbd_2d = "0.4"
 bevy_embedded_assets = "0.10.2"
 rand = "0.8"
+bevy_egui = "0.27"
 
 [profile.dev]
 opt-level = 1
